--- a/食品备样条码导入/食品备样条码导入/食品报告.vbproj
+++ b/食品备样条码导入/食品备样条码导入/食品报告.vbproj
@@ -466,6 +466,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
+    <None Include="db.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="My Project\app.manifest">
       <SubType>Designer</SubType>
     </None>
